syntax = "proto3";

package dump.v1beta1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "inventorypb/services.proto";
import "managementpb/backup/common.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "api/managementpb/dump;dumpv1beta1";

enum DumpStatus {
  BACKUP_STATUS_INVALID = 0;
  BACKUP_STATUS_IN_PROGRESS = 1;
  BACKUP_STATUS_SUCCESS = 2;
  BACKUP_STATUS_ERROR = 3;
}

message Dump {
  string dump_id = 1;
  DumpStatus status = 2;
  repeated string service_names = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  google.protobuf.Timestamp created_at = 7;
}

message StartDumpRequest {
  repeated string service_names = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  bool export_qan = 4;
  bool ignore_load = 5;
}

message StartDumpResponse {
  string dump_id = 1;
}

message ListDumpsRequest {}

message ListDumpsResponse {
  repeated Dump dumps = 1;
}

message DeleteDumpRequest {
  repeated string dump_ids = 1;
}

message DeleteDumpResponse {}

message GetLogsRequest {
  string dump_id = 1;
  uint32 offset = 2;
  uint32 limit = 3;
  string restore_id = 4;
}

message GetLogsResponse {
  repeated LogChunk logs = 1;
  bool end = 2;
}

// LogChunk represent one chunk of logs.
message LogChunk { // TODO backups API has the same type, should we share it?
  uint32 chunk_id = 1;
  string data = 2;
}

message FTPParameters {
  string address = 1;
  string user = 2;
  string password = 3;
}

message UploadDumpRequest {
  repeated string dump_ids = 1;

  oneof destination {
    FTPParameters ftp_parameters = 5;
  }
}

message UploadDumpResponse {}

service Dumps {
  // StartDump request creates pmm dump.
  rpc StartDump(StartDumpRequest) returns (StartDumpResponse) {
    option (google.api.http) = {
      post: "/v1/management/dump/Dumps/Start"
      body: "*"
    };
    // TODO this option
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {description: "Could return the Error message in the details containing specific ErrorCode indicating failure reason:\nERROR_CODE_XTRABACKUP_NOT_INSTALLED - xtrabackup is not installed on the service\nERROR_CODE_INVALID_XTRABACKUP - different versions of xtrabackup and xbcloud\nERROR_CODE_INCOMPATIBLE_XTRABACKUP - xtrabackup is not compatible with MySQL for taking a backup"};
  }
  // ListDumps returns a list of all pmm dumps.
  rpc ListDumps(ListDumpsRequest) returns (ListDumpsResponse) {
    option (google.api.http) = {
      post: "/v1/management/dump/Dumps/List"
      body: "*"
    };
  }
  // DeleteDump deletes specified pmm dump.
  rpc DeleteDump(DeleteDumpRequest) returns (DeleteDumpResponse) {
    option (google.api.http) = {
      post: "/v1/management/dump/Dumps/Delete"
      body: "*"
    };
  }
  // GetLogs returns logs from pmm-dump tool.
  rpc GetDumpLogs(GetLogsRequest) returns (GetLogsResponse) {
    option (google.api.http) = {
      post: "/v1/management/dump/Dumps/GetDumpLogs"
      body: "*"
    };
  }
  // GetLogs returns logs from pmm-dump tool.
  rpc UploadDump(UploadDumpRequest) returns (UploadDumpResponse) {
    option (google.api.http) = {
      post: "/v1/management/dump/Dumps/Upload"
      body: "*"
    };
  }
}
